<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fullNameTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_full_name_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTitleTextView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addressTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressStreetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_street"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTitleTextView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressCityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_city"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/addressZipCodeEditText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressStreetEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressZipCodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_zip_code"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toStartOf="@+id/addressCountryEditText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/addressCityEditText"
            app:layout_constraintTop_toBottomOf="@+id/addressStreetEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressCountryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address_country"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/addressZipCodeEditText"
            app:layout_constraintTop_toBottomOf="@+id/addressStreetEditText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneNumberTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressCountryEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneCountryCodeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number_country_code"
            android:inputType="phone"
            app:layout_constraintEnd_toStartOf="@+id/phoneNumberEditText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitleTextView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/phoneCountryCodeEditText"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitleTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_save_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneCountryCodeEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>